--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-todo
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>David Edwards</title>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <meta name="author" content="David Edwards"/>
+  </head>
+  <body>
+    <div id="header">
+      <p id="text">David Edwards</p>
+    </div>
+    <div id="content">
+      <div id="left">
+        <img id="photo" src="images/photo.png"/>
+      </div>
+      <div id="right">
+        <p id="title">VP & Fellow</p>
+        <p id="company"><a href="http://www.cerner.com/">Cerner Corporation</a></p>
+        <p id="email"><a href="mailto:david.l.edwards@gmail.com">david.l.edwards@gmail.com</a></p>
+        <div id="links">
+          <p><a href="https://linkedin.com/in/davidledwards">LinkedIn</a></p>
+          <p><a href="https://twitter.com/davidledwards">Twitter</a></p>
+          <p><a href="https://github.com/davidledwards">GitHub</a></p>
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      <p id="text">Copyright &copy; 2014 David Edwards</p>
+    </div>
+  </body>
+</html>
