includes links to open source projects

--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
         <p id="company"><a href="http://www.cerner.com/">Cerner Corporation</a></p>
         <p id="email"><a href="mailto:david.l.edwards@gmail.com">david.l.edwards@gmail.com</a></p>
         <div id="links">
+          <p id="subheader-text">Sites</p>
           <p><a href="https://linkedin.com/in/davidledwards">LinkedIn</a></p>
           <p><a href="https://twitter.com/davidledwards">Twitter</a></p>
           <p><a href="https://github.com/davidledwards">GitHub</a></p>
+        </div>
+        <div id="projects">
+          <p id="subheader-text">Projects</p>
+          <p><a href="http://www.loopfor.com/zookeeper/">Zookeeper</a></p>
+          <p><a href="http://www.loopfor.com/scalop/">Scalop</a></p>
         </div>
       </div>
     </div>
