use apex domain rather than www subdomain

--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ title: David Edwards
 <p><a href="https://twitter.com/davidledwards">Twitter</a></p>
 <p><a href="https://github.com/davidledwards">GitHub</a></p>
 <h2>Projects</h2>
-<p><a href="http://www.loopfor.com/zookeeper/">Zookeeper</a></p>
-<p><a href="http://www.loopfor.com/scalop/">Scalop</a></p>
+<p><a href="http://loopfor.com/zookeeper/">Zookeeper</a></p>
+<p><a href="http://loopfor.com/scalop/">Scalop</a></p>
