--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: David Edwards
 ---
-<img id="photo" src="images/photo.png"/>
+<img id="photo" src="/images/photo.png"/>
 <h2>Personal</h2>
 <p>VP &amp; Fellow, <a href="http://www.cerner.com/">Cerner Corporation</a></p>
 <p><a href="mailto:david.l.edwards@gmail.com">david.l.edwards@gmail.com</a></p>
