--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 ---
-layout: default
+layout: main
 title: David Edwards
 ---
 <img id="photo" src="/images/photo.png"/>
-<h2>Personal</h2>
-<p>VP &amp; Fellow, <a href="http://www.cerner.com/">Cerner Corporation</a></p>
-<p><a href="mailto:david.l.edwards@gmail.com">david.l.edwards@gmail.com</a></p>
-<h2>Sites</h2>
-<p><a href="https://linkedin.com/in/davidledwards">LinkedIn</a></p>
-<p><a href="https://twitter.com/davidledwards">Twitter</a></p>
-<p><a href="https://github.com/davidledwards">GitHub</a></p>
-<h2>Projects</h2>
-<p><a href="http://loopfor.com/zookeeper/">Zookeeper</a></p>
-<p><a href="http://loopfor.com/scalop/">Scalop</a></p>
