oops, not working in markdown

--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,9 @@ title: David Edwards | About
 ---
 <h2>Bio</h2>
 <p>
-  Coming soon! In the meantime, check out my [LinkedIn profile](https://linkedin.com/in/davidledwards) for everything you need
+  Coming soon!
+</p>
+<p>
+  In the meantime, check out my <a href="https://linkedin.com/in/davidledwards">LinkedIn profile</a> for everything you need
   to know about me.
 </p>
