--- a/404.html
+++ b/404.html
@@ -4,4 +4,4 @@ title: David Edwards
 permalink: /404.html
 ---
 <h2 class="not-found">This page does not exist</h2>
-<img class="photo" src="/images/photo.png"/>
+<img class="photo" src="/images/headshot.jpg"/>
