--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: main
 title: David Edwards
 ---
-<img class="photo" src="/images/photo.png"/>
+<img class="photo" src="/images/headshot.jpg"/>
