redesign site layout using bulma.io toolkit

--- a/404.html
+++ b/404.html
@@ -1,7 +1,19 @@
 ---
-layout: main
+layout: default
 title: David Edwards
 permalink: /404.html
 ---
-<h2 class="not-found">This page does not exist</h2>
-<img class="photo" src="/images/headshot.jpg"/>
+<section class="section">
+    <div class="columns">
+        <div class="column"></div>
+        <div class="column is-half">
+            <figure class="image">
+                <img class="is-1by1 is-rounded" src="/images/headshot.jpg"/>
+            </figure>
+            <p class="is-size-3 has-text-centered has-text-danger">
+                This page does not exist
+            </p>
+        </div>
+        <div class="column"></div>
+    </div>
+</section>
