--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 ---
-layout: main
+layout: default
 title: David Edwards
 ---
-<img class="photo" src="/images/headshot.jpg"/>
+<section class="section">
+    <div class="columns">
+        <div class="column"></div>
+        <div class="column is-half">
+            <figure class="image">
+                <img class="is-1by1 is-rounded" src="/images/headshot.jpg"/>
+            </figure>
+        </div>
+        <div class="column"></div>
+    </div>
+</section>
