change 404 page content

--- a/404.html
+++ b/404.html
@@ -8,11 +8,8 @@ permalink: /404.html
         <div class="column"></div>
         <div class="column is-half">
             <figure class="image">
-                <img class="is-1by1 is-rounded" src="/images/headshot.jpg"/>
+                <img class="is-1by1 is-rounded" src="/images/sad-face.png"/>
             </figure>
-            <p class="is-size-3 has-text-centered has-text-danger">
-                This page does not exist
-            </p>
         </div>
         <div class="column"></div>
     </div>
