update about page

--- a/about/index.html
+++ b/about/index.html
@@ -28,10 +28,13 @@ title: About
     </div>
 </div>
 <p>
-    I am currently the CTO at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a> focused on helping enterprises sell more profitably. In a nutshtell, our primary goal is to help clients identify and harvest margin opportunities.
+    I am currently the Chief Technology Officer at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a> focused on helping enterprises sell more profitably. In a nutshtell, our primary goal is to help clients identify and harvest margin opportunities.
 </p>
 <p>
-    I have responsibility for Engineering and User Experience, the teams of which are geographically dispersed among the following locations:
+    I have principal responsibility for the Engineering and User Experience teams, for which the majority of time is spent developing and communicating technology strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how we work together.
+</p>
+<p>
+    The Engineering and User Experience teams are geographically dispersed among the following locations:
 </p>
 <ul>
     <li><a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a></li>
@@ -43,6 +46,15 @@ title: About
     <li><a href="https://goo.gl/maps/ehfkpwVLvTE2">Stockholm</a></li>
     <li><a href="https://goo.gl/maps/M1KannUcvTv">Skopje</a></li>
 </ul>
+<p>
+    Joining the company in August 2016, I directed most of my efforts on structural and process changes that essentially modernized the way we develop products. A focus on cycle time reduction, build automation and technical excellence has given our teams significant advantage over competitors that continue to operate with a traditional mindset.
+</p>
+<p>
+    Today, the product and engineering teams are concentrating much of their effort on expanding the suite of capabilities in our <strong>commercial excellence</strong> platform, which includes development of a highly differentiated intelligence substrate.
+</p>
+<p>
+    Vendavo has been owned by <a href="https://www.franciscopartners.com/home">Francisco Partners</a>, a global private equity firm, <a href="https://www.franciscopartners.com/news/francisco-partners-completes-acquisition-of-vendavo-inc">since October 2014</a>.
+</p>
 <br>
 <div class="level is-mobile">
     <div class="level-left">
@@ -133,7 +145,7 @@ title: About
     <li><a href="http://davidedwards.io/scalop">scalop</a></li>
 </ul>
 <p>
-    Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> and <a href="https://github.com/davidledwards/rpn-haskell">Kotlin</a> implementations.
+    Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style (no side effects) using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> and <a href="https://github.com/davidledwards/rpn-haskell">Kotlin</a> implementations.
 </p>
 <ul>
     <li><a href="https://github.com/davidledwards/rpn">rpn</a></li>
