fix grammatical error

--- a/about/index.html
+++ b/about/index.html
@@ -138,7 +138,7 @@ title: About
 <br>
 <h1 class="title is-3">Projects</h1>
 <p>
-    I used spend a bit of my spare time working on a few open source projects written in <a href="http://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
+    I used to spend a bit of my spare time working on a few open source projects written in <a href="http://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
 </p>
 <ul>
     <li><a href="http://davidedwards.io/zookeeper">zookeeper</a></li>
