--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,9 @@ title: About
 ---
 <section class="section content">
 <h1 class="title is-3">Professional</h1>
-<p>
-    A complete picture of my professional life can be found <a href="https://linkedin.com/in/davidledwards">here</a>.
-</p>
+<div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="davidledwards">
+    <a class="LI-simple-link" href="https://www.linkedin.com/in/davidledwards?trk=profile-badge">David Edwards</a>
+</div>
 <br>
 <div class="level is-mobile">
     <div class="level-left">
