--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@ title: About
     </div>
 </div>
 <p>
-    I am currently the Chief Technology Officer at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. We are acutely focused on helping enterprises claim their commercial edge, and in a nutshtell, our primary goal is to help customers identify and harvest margin opportunities.
+    I am currently the Chief Technology Officer at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. We are laser focused on helping enterprises claim their commercial edge, and in a nutshtell, our primary goal is to help customers identify and harvest margin opportunities.
 </p>
 <p>
     I have principal responsibility for the Engineering and User Experience teams for which the majority of time is spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how we work together.
