update projects section with GPS clock

--- a/about/index.html
+++ b/about/index.html
@@ -145,12 +145,19 @@ title: About
     <li><a href="http://davidedwards.io/scalop">scalop</a></li>
 </ul>
 <p>
-    Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style (no side effects) using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> and <a href="https://github.com/davidledwards/rpn-haskell">Kotlin</a> implementations.
+    Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style (no side effects) using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> and <a href="https://github.com/davidledwards/rpn-clojure">Clojure</a> implementations. A <a href="https://github.com/davidledwards/rpn-kotlin">Kotlin</a> version has already been implemented.
 </p>
 <ul>
     <li><a href="https://github.com/davidledwards/rpn">rpn</a></li>
-    <li><a href="https://github.com/davidledwards/rpn-haskell">rpn-haskell</a></li>
     <li><a href="https://github.com/davidledwards/rpn-kotlin">rpn-kotlin</a></li>
+    <li><a href="https://github.com/davidledwards/rpn-haskell">rpn-haskell</a> (in progress)</li>
+    <li><a href="https://github.com/davidledwards/rpn-clojure">rpn-clojure</a> (in progress)</li>
+</ul>
+<p>
+    During the COVID lockdown of 2020, I developed a renewed interest in electronics, specifically the intersection of digital circuits and software. This ultimately led to building a <a href="https://github.com/davidledwards/gps-clock">GPS-synchronized clock</a> using an Arduino board as the micrprocessor.
+</p>
+<ul>
+    <li><a href="https://github.com/davidledwards/gps-clock">gps-clock</a></li>
 </ul>
 <p>
     Other projects can be found on my GitHub <a href="https://github.com/davidledwards">repository</a>.
