--- a/about/index.html
+++ b/about/index.html
@@ -28,7 +28,7 @@ title: About
     </div>
 </div>
 <p>
-    I am currently the Chief Technology Officer at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. We are laser focused on helping enterprises claim their commercial edge, and in a nutshtell, our primary goal is to help customers identify and harvest margin opportunities.
+    I am currently the Chief Technology Officer at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. Our company is focused on helping enterprises maximize growth and profitability by identifying and harvesting margin improvement opportunities.
 </p>
 <p>
     I have principal responsibility for the Engineering and User Experience teams for which the majority of time is spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how we work together.
@@ -44,7 +44,6 @@ title: About
     <li><a href="https://goo.gl/maps/L3nMC8Xb6Gy">Ostrava</a></li>
     <li><a href="https://goo.gl/maps/69ya1kAFNcN2">Hradec Kralove</a></li>
     <li><a href="https://goo.gl/maps/ehfkpwVLvTE2">Stockholm</a></li>
-    <li><a href="https://goo.gl/maps/M1KannUcvTv">Skopje</a></li>
 </ul>
 <p>
     Joining the company in August 2016, I directed most of my efforts on structural and process changes that essentially modernized the way we develop products. A focus on cycle time reduction, build automation and technical excellence has given our teams significant advantage over competitors that continue to operate with a traditional mindset.
@@ -145,13 +144,13 @@ title: About
     <li><a href="http://davidedwards.io/scalop">scalop</a></li>
 </ul>
 <p>
-    Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style (no side effects) using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> and <a href="https://github.com/davidledwards/rpn-clojure">Clojure</a> implementations. A <a href="https://github.com/davidledwards/rpn-kotlin">Kotlin</a> version has already been implemented.
+    Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style (no side effects) using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on a <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> implementation after suspending that effort several years ago. Both <a href="https://github.com/davidledwards/rpn-kotlin">Kotlin</a> and <a href="https://github.com/davidledwards/rpn-clojure">Clojure</a> versions have already been implemented.
 </p>
 <ul>
     <li><a href="https://github.com/davidledwards/rpn">rpn</a></li>
     <li><a href="https://github.com/davidledwards/rpn-kotlin">rpn-kotlin</a></li>
+    <li><a href="https://github.com/davidledwards/rpn-clojure">rpn-clojure</a></li>
     <li><a href="https://github.com/davidledwards/rpn-haskell">rpn-haskell</a> (in progress)</li>
-    <li><a href="https://github.com/davidledwards/rpn-clojure">rpn-clojure</a> (in progress)</li>
 </ul>
 <p>
     During the COVID lockdown of 2020, I developed a renewed interest in electronics, specifically the intersection of digital circuits and software. This ultimately led to building a <a href="https://github.com/davidledwards/gps-clock">GPS-synchronized clock</a> using an Arduino board as the micrprocessor.
