--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,10 @@ title: About
     Today, the product and engineering teams are concentrating much of their effort on expanding the suite of capabilities in our <strong>commercial excellence</strong> platform, which includes development of a highly differentiated intelligence substrate.
 </p>
 <p>
-    Vendavo has been owned by <a href="https://www.franciscopartners.com/home">Francisco Partners</a>, a global private equity firm, <a href="https://www.franciscopartners.com/news/francisco-partners-completes-acquisition-of-vendavo-inc">since October 2014</a>.
+    Vendavo was acquired by <a href="https://www.franciscopartners.com/home">Francisco Partners</a>, a global private equity firm, in <a href="https://www.franciscopartners.com/news/francisco-partners-completes-acquisition-of-vendavo-inc">October 2014</a>.
+</p>
+<p>
+    In <a href="https://www.vendavo.com/news-releases/vendavo-secures-strategic-investment-to-accelerate-growth/">August 2021</a>, a new strategic round of investment was secured from both <a href="https://www.accel-kkr.com/">Accel-KKR</a> and Francisco Partners.
 </p>
 <br>
 <div class="level is-mobile">
@@ -177,6 +180,8 @@ title: About
     Below are some of the notable places I have traveled over the course of my life.
 </p>
 <ul>
+    <li><a href="https://goo.gl/maps/AhnoSRZei5LzWf437">Split, Croatia</a></li>
+    <li><a href="https://goo.gl/maps/X3HsTaUvCLSK8MxG8">Zagreb, Croatia</a></li>
     <li><a href="https://goo.gl/maps/ntLhkhb8BGUiCqLP6">Florence, Italy</a></li>
     <li><a href="https://goo.gl/maps/urXekruTufdnMjUU9">Cinque Terre, Italy</a></li>
     <li><a href="https://goo.gl/maps/hK1q8iYBdLPmNMWu8">Tuscany, Italy</a></li>
