change http: links to https:

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@ title: About
     </div>
 </div>
 <p>
-    I am currently the Chief Technology Officer at <a href="http://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. Our company is focused on helping enterprises maximize growth and profitability by identifying and harvesting margin improvement opportunities.
+    I am currently the Chief Technology Officer at <a href="https://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. Our company is focused on helping enterprises maximize growth and profitability by identifying and harvesting margin improvement opportunities.
 </p>
 <p>
     I have principal responsibility for the Engineering and User Experience teams for which the majority of time is spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how we work together.
@@ -75,7 +75,7 @@ title: About
     </div>
 </div>
 <p>
-    I am also an angel investor and technical advisor for a health care startup based in Kansas City, <a href="http://www.smrxt.com">SMRxT</a>, advising on matters related to software architecture, product strategy, information security and regulatory compliance.
+    I am also an angel investor and technical advisor for a health care startup based in Kansas City, <a href="https://www.smrxt.com">SMRxT</a>, advising on matters related to software architecture, product strategy, information security and regulatory compliance.
 </p>
 <br>
 <div class="level is-mobile">
@@ -98,7 +98,7 @@ title: About
     </div>
 </div>
 <p>
-    I was previously Vice President and Engineering Fellow at <a href="http://www.cerner.com">Cerner</a>, a global health care information technology company headquartered in <a href="https://goo.gl/maps/g1TaiVfG5BT2">Kansas City, Missouri</a>. At the time of my departure, the global reach of Cerner solutions spanned more than 30 countries.
+    I was previously Vice President and Engineering Fellow at <a href="https://www.cerner.com">Cerner</a>, a global health care information technology company headquartered in <a href="https://goo.gl/maps/g1TaiVfG5BT2">Kansas City, Missouri</a>. At the time of my departure, the global reach of Cerner solutions spanned more than 30 countries.
 </p>
 <p>
     Prior to leaving, I had executive responsibility for a very talented software infrastructure group that designed and built web-scale services primarily centered around authentication, authorization, auditing, administration, and petabyte-sized data ingestion and processing. In addition to my day job, I spent a significant amount of time focused on strategic technology and architecture imperatives with an emphasis on accelerating the transition from traditional enterprise applications to service-based solutions and platforms.
@@ -112,7 +112,7 @@ title: About
 <br>
 <h1 class="title is-3">Personal</h1>
 <p>
-    My first exposure to computing happened around the age of 10 when my father brought home an <a href="http://www.hpmuseum.org/hp6797.htm">HP-97 calculator</a>, which he used at work to run curve fitting programs to assist in the optimization of manufacturing processes.
+    My first exposure to computing happened around the age of 10 when my father brought home an <a href="https://www.hpmuseum.org/hp6797.htm">HP-97 calculator</a>, which he used at work to run curve fitting programs to assist in the optimization of manufacturing processes.
 </p>
 <figure class="image">
     <img src="/images/hp-97.png" alt="HP-97 Calculator" style="width:50%">
@@ -124,7 +124,8 @@ title: About
     Access to personal computers in the late 1970's was quite difficult, but I managed to convince the school principal to grant me access to the <strong>only</strong> computer on the entire premises, an <a href="https://en.wikipedia.org/wiki/Apple_II">Apple II</a>. I would furiously write <a href="https://en.wikipedia.org/wiki/BASIC">BASIC</a> programs on paper during weeknights, then spend the weekends banging away at the keyboard trying to make them come alive. Ah, how things have changed, but those were formidable days.
 </p>
 <p>
-    While attending my sophomore year at <a href="http://www.nwmissouri.edu">Northwest Missouri State University</a>, I spent most of my free time developing a text editor in <a href="https://en.wikipedia.org/wiki/Turbo_Pascal">Turbo Pascal 3.0</a>. Not that the world needed more text editors at the time, but this was more about learning and exploring and building something nontrivial. In retrospect, this single project contributed more to my professional success than any other academic endeavor. Unfortunately, the original source code has been misplaced.
+    While attending my sophomore year at <a href="
+    https://www.nwmissouri.edu">Northwest Missouri State University</a>, I spent most of my free time developing a text editor in <a href="https://en.wikipedia.org/wiki/Turbo_Pascal">Turbo Pascal 3.0</a>. Not that the world needed more text editors at the time, but this was more about learning and exploring and building something nontrivial. In retrospect, this single project contributed more to my professional success than any other academic endeavor. Unfortunately, the original source code has been misplaced.
 </p>
 <p>
     I spent about 18 years doing hardcore software engineering, much of that focused on building cross-platform middleware, protocols, services, tools, compilers and management applications. Designing middleware around a single code base to run on VMS, AIX, Windows and Linux teaches you a lot about portability and how to design systems. I realized much later in my career that great software design is a blending of art and science, though for me, it was something that seemed to come naturally.
@@ -132,16 +133,16 @@ title: About
 <br>
 <h1 class="title is-3">Education</h1>
 <p>
-    BS in Computer Science and a minor in Mathematics from <a href="http://www.nwmissouri.edu">Northwest Missouri State University</a>.
+    BS in Computer Science and a minor in Mathematics from <a href="https://www.nwmissouri.edu">Northwest Missouri State University</a>.
 </p>
 <br>
 <h1 class="title is-3">Projects</h1>
 <p>
-    I used to spend a bit of my spare time working on a few open source projects written in <a href="http://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
+    I used to spend a bit of my spare time working on a few open source projects written in <a href="https://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
 </p>
 <ul>
-    <li><a href="http://davidedwards.io/zookeeper">zookeeper</a></li>
-    <li><a href="http://davidedwards.io/scalop">scalop</a></li>
+    <li><a href="https://davidedwards.io/zookeeper">zookeeper</a></li>
+    <li><a href="https://davidedwards.io/scalop">scalop</a></li>
 </ul>
 <p>
     Another project worth mentioning is a relatively simple <a href="https://github.com/davidledwards/rpn">compiler and interpreter</a> I developed for instructional purposes as part of a Cerner developer conference talk. The goal was getting attendees interested in functional programming, so the compiler was implemented in a purely functional style (no side effects) using Scala. I suggested during the talk that attendees port the compiler to their favorite functional language. I am currently working on a <a href="https://github.com/davidledwards/rpn-haskell">Haskell</a> implementation after suspending that effort several years ago. Both <a href="https://github.com/davidledwards/rpn-kotlin">Kotlin</a> and <a href="https://github.com/davidledwards/rpn-clojure">Clojure</a> versions have already been implemented.
