--- a/about/index.html
+++ b/about/index.html
@@ -28,10 +28,10 @@ title: About
     I am currently the Chief Technology Officer at <a href="https://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. Our company is focused on helping enterprises maximize growth and profitability by identifying and harvesting margin improvement opportunities.
 </p>
 <p>
-    I have principal responsibility for the Engineering and User Experience teams for which the majority of time is spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how we work together.
+    I have principal responsibility for Engineering, User Experience and Security &amp; Compliance. The majority of time is spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how we work together to deliver great products.
 </p>
 <p>
-    The Engineering and User Experience teams are geographically dispersed among the following locations:
+    All of our teams are geographically distributed across the following locations:
 </p>
 <ul>
     <li><a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a></li>
@@ -41,6 +41,7 @@ title: About
     <li><a href="https://goo.gl/maps/L3nMC8Xb6Gy">Ostrava</a></li>
     <li><a href="https://goo.gl/maps/69ya1kAFNcN2">Hradec Kralove</a></li>
     <li><a href="https://goo.gl/maps/ehfkpwVLvTE2">Stockholm</a></li>
+    <li><a href="https://goo.gl/maps/xKNJP9H78ySpBC5W9">Bangalore</a></li>
 </ul>
 <p>
     Joining the company in August 2016, I directed most of my efforts on structural and process changes that essentially modernized the way we develop products. A focus on cycle time reduction, build automation and technical excellence has given our teams significant advantage over competitors that continue to operate with a traditional mindset.
@@ -181,6 +182,12 @@ title: About
     Below are some of the notable places I have traveled over the course of my life.
 </p>
 <ul>
+    <li><a href="https://goo.gl/maps/LovgMAMxhaRqMVdo9">Anchorage, Alaska</a></li>
+    <li><a href="https://goo.gl/maps/vNcEoooKHRbLCB3w8">Talkeetna, Alaska</a></li>
+    <li><a href="https://goo.gl/maps/tSqkpxHb3iNqR4MKA">Seward, Alaska</a></li>
+    <li><a href="https://goo.gl/maps/52toYupCj6KADtd87">Juneau, Alaska</a></li>
+    <li><a href="https://goo.gl/maps/8Bsu7nTH3dKPd4hi8">Skagway, Alaska</a></li>
+    <li><a href="https://goo.gl/maps/goHafd5k6QmqQ86k8">Ketchikan, Alaska</a></li>
     <li><a href="https://goo.gl/maps/AhnoSRZei5LzWf437">Split, Croatia</a></li>
     <li><a href="https://goo.gl/maps/X3HsTaUvCLSK8MxG8">Zagreb, Croatia</a></li>
     <li><a href="https://goo.gl/maps/ntLhkhb8BGUiCqLP6">Florence, Italy</a></li>
