minor layout changes

--- a/about/index.html
+++ b/about/index.html
@@ -135,7 +135,10 @@ title: About
     <br />
     <h1 class="title is-3">Projects</h1>
     <p>
-        Recently, much of my spare time has been focused on learning <a href="https://rust-lang.org">Rust</a>. This language is particularly interesting because of my roots in C++ and systems programming. The promise of writing safe, high-performance software is compelling, though this tradeoff comes with a substantial learning curve. The <a href="https://github.com/davidledwards/keyb">keyb</a> project was a relatively simple and useful program for echoing keystrokes, but the more interesting part was learning about multi-target compilation, releasing on GitHub, and installing the CLI via <a href="https://brew.sh/">Homebrew</a>. I am also working on a more interesting and nontrivial text editor, called <a href="https://github.com/davidledwards/ped">ped</a>, that was inspired by a similar program I developed during my college years.
+        Recently, much of my spare time has been focused on learning <a href="https://rust-lang.org">Rust</a>. This language is particularly interesting because of my roots in C++ and systems programming. The promise of writing safe, high-performance software is compelling, though this tradeoff comes with a substantial learning curve.
+    </p>
+    <p>
+        The <a href="https://github.com/davidledwards/keyb">keyb</a> project is a relatively simple and useful program for echoing keystrokes, but the more interesting part was learning about multi-target compilation, releasing on GitHub, and installing the CLI via <a href="https://brew.sh/">Homebrew</a>. I am also working on a more interesting and nontrivial text editor, called <a href="https://github.com/davidledwards/ped">ped</a>, that was inspired by a similar program I developed during my college years.
     </p>
     <p>
         I used to spend a bit of my spare time working on a few open source projects written in <a href="https://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
@@ -183,6 +186,8 @@ title: About
         Below are some of the notable places I have traveled over the course of my life.
     </p>
     <ul>
+        <li><a href="https://maps.app.goo.gl/DjYDE8yzzwywumrP9">Victoria, BC</a></li>
+        <li><a href="https://maps.app.goo.gl/yNiWJB2DeeLYmWq66">Port Angeles, Washington</a></li>
         <li><a href="https://goo.gl/maps/LovgMAMxhaRqMVdo9">Anchorage, Alaska</a></li>
         <li><a href="https://goo.gl/maps/vNcEoooKHRbLCB3w8">Talkeetna, Alaska</a></li>
         <li><a href="https://goo.gl/maps/tSqkpxHb3iNqR4MKA">Seward, Alaska</a></li>
