update about page

--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,8 @@ title: About
     <p>
         I was previously the Chief Technology Officer at <a href="https://www.vendavo.com">Vendavo</a>, a global software and services company headquartered in <a href="https://goo.gl/maps/YhCJhNTBw1S2">Denver</a>. The company is focused on helping enterprises maximize growth and profitability by identifying and harvesting margin improvement opportunities.
     </p>
-    <p> My executive responsibilities included Engineering, User Experience and Security &amp; Compliance. The majority of that time was spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how teams worked together to deliver great products.
+    <p>
+        My executive responsibilities included Engineering, User Experience and Security &amp; Compliance. The majority of that time was spent developing and communicating technology vision and strategy, ensuring organizational alignment with business goals, and relentlessly optimizing how teams worked together to deliver great products.
     </p>
     <p>
         At the time, teams were geographically distributed across the following locations:
@@ -66,11 +67,11 @@ title: About
             </div>
         </div>
         <div class="level-right">
-            <h3 class="subtitle is-6 has-text-grey">Since 2014</h3>
+            <h3 class="subtitle is-6 has-text-grey">2014 to 2024</h3>
         </div>
     </div>
     <p>
-        I am also an angel investor and technical advisor for a healthcare startup based in Kansas City, <a href="https://www.smrxt.com">SMRxT</a>, advising on matters related to software architecture, product strategy, information security and regulatory compliance.
+        I was also an angel investor and technical advisor for a healthcare startup based in Kansas City, <a href="https://www.smrxt.com">SMRxT</a>, advising on matters related to software architecture, product strategy, information security and regulatory compliance.
     </p>
     <div class="level is-mobile">
         <div class="level-left">
