update about page

--- a/about/index.html
+++ b/about/index.html
@@ -109,7 +109,7 @@ title: About
         My first exposure to computing happened around the age of 10 when my father brought home an <a href="https://www.hpmuseum.org/hp6797.htm">HP-97 calculator</a>, which he used at work to run curve fitting programs to assist in the optimization of manufacturing processes.
     </p>
     <p>
-        This particular calculator was capable of storing programs on a magnetic strip, which can be seen dangling at the left of the LED display. It could only be programmed by expressing computations in <a href="https://en.wikipedia.org/wiki/Reverse_Polish_notation">postfix notation</a>, so I became somewhat familiar with the idea of using a stack for evaluation. It was also perhaps a gentle introduction to <a href="https://en.wikipedia.org/wiki/Automata_theory">automata theory</a>.
+        This particular calculator was capable of storing programs on a magnetic strip. It could only be programmed by expressing computations in <a href="https://en.wikipedia.org/wiki/Reverse_Polish_notation">postfix notation</a>, so I became somewhat familiar with the idea of using a stack for evaluation. It was also perhaps a gentle introduction to <a href="https://en.wikipedia.org/wiki/Automata_theory">automata theory</a>.
     </p>
     <p>
         Access to personal computers in the late 1970's was quite difficult, but I managed to convince the school principal to grant me access to the <strong>only</strong> computer on the entire premises, an <a href="https://en.wikipedia.org/wiki/Apple_II">Apple II</a>. I would furiously write <a href="https://en.wikipedia.org/wiki/BASIC">BASIC</a> programs on paper during weeknights, then spend the weekends banging away at the keyboard trying to make them come alive. Ah, how things have changed, but those were formidable days.
@@ -129,7 +129,10 @@ title: About
         Recently, much of my spare time has been focused on learning <a href="https://rust-lang.org">Rust</a>. This language is particularly interesting because of my roots in C++ and systems programming. The promise of writing safe, high-performance software is compelling, though this tradeoff comes with a substantial learning curve.
     </p>
     <p>
-        The <a href="https://github.com/davidledwards/keyb">keyb</a> project is a relatively simple and useful program for echoing keystrokes, but the more interesting part was learning about multi-target compilation, releasing on GitHub, and installing the CLI via <a href="https://brew.sh/">Homebrew</a>. I am also working on a more interesting and nontrivial text editor, called <a href="https://github.com/davidledwards/ped">ped</a>, that was inspired by a similar program I developed during my college years.
+        The <a href="https://github.com/davidledwards/keyb">keyb</a> project is a relatively simple and useful program for echoing keystrokes, but the more interesting part was learning about multi-target compilation, releasing on GitHub, and installing the CLI via <a href="https://brew.sh/">Homebrew</a>.
+    </p>
+    <p>
+        I am also working on a more interesting and nontrivial text editor, called <a href="https://github.com/davidledwards/ped">ped</a>, that was inspired by the editor I developed during my university years. Over the latter half of 2024, a considerable amount of my personal time was directed towards advancing this project. It has now reached a point of maturity where I use it exclusively for terminal-based editing, replacing <a href="https://www.nano-editor.org/">nano</a> as my preferred editor.
     </p>
     <p>
         I used to spend a bit of my spare time working on a few open source projects written in <a href="https://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
@@ -163,7 +166,6 @@ title: About
         <li>Distributed systems</li>
         <li>Functional languages</li>
         <li>Electronics</li>
-        <li>Cycling</li>
         <li>Fitness</li>
         <li>Travel</li>
         <li>Cooking</li>
