minor change in about wording

--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@ title: About
         The <a href="https://github.com/davidledwards/keyb">keyb</a> project is a relatively simple and useful program for echoing keystrokes, but the more interesting part was learning about multi-target compilation, releasing on GitHub, and installing the CLI via <a href="https://brew.sh/">Homebrew</a>.
     </p>
     <p>
-        I am also working on a more interesting and nontrivial text editor, called <a href="https://github.com/davidledwards/ped">ped</a>, that was inspired by the editor I developed during my university years. Over the latter half of 2024, a considerable amount of my personal time was directed towards advancing this project. It has now reached a point of maturity where I use it exclusively for terminal-based editing, replacing <a href="https://www.nano-editor.org/">nano</a> as my preferred editor.
+        I am also working on a nontrivial text editor, called <a href="https://github.com/davidledwards/ped">ped</a>, that was inspired by the editor I developed during my university years. Over the latter half of 2024, a considerable amount of my personal time was directed towards advancing this project. It has now reached a point of maturity where I use it exclusively for terminal-based editing, replacing <a href="https://www.nano-editor.org/">nano</a> as my preferred editor.
     </p>
     <p>
         I used to spend a bit of my spare time working on a few open source projects written in <a href="https://www.scala-lang.org">Scala</a>. The primary intention was to learn functional programming while doing something useful and nontrivial.
