add board member position to about page

--- a/about/index.html
+++ b/about/index.html
@@ -7,16 +7,26 @@ title: About
     <div class="level is-mobile">
         <div class="level-left">
             <div class="level-item">
-                <a href="https://www.vendavo.com">
-                    <h2 class="title is-4">Vendavo</h2>
+                <a href="https://www.illuminate.ai/">
+                    <p class="title is-4">Illuminate</p>
+                    <p class="subtitle is-5">Board Member</p>
                 </a>
             </div>
+        </div>
+        <div class="level-right">
+            <h3 class="subtitle is-6 has-text-grey">Since 2025</h3>
+        </div>
+    </div>
+    <p>
+        I am currently serving as an independent board member for <a href="https://www.illuminate.ai/">Illuminate</a>, an industry leading provider of end-to-end discovery, follow-up, and patient management solutions for hospitals and health systems. Illuminate combines years of advanced AI technology with the knowledge of nurse navigators that possess a deep understanding of integrated clinical workflows and follow-up processes.
+    </p>
+    <div class="level is-mobile">
+        <div class="level-left">
             <div class="level-item">
-                <figure class="image is-24x24 is-marginless">
-                    <a href="https://www.vendavo.com">
-                        <img src="/images/vendavo-icon.png" />
-                    </a>
-                </figure>
+                <a href="https://www.vendavo.com">
+                    <p class="title is-4">Vendavo</p>
+                    <p class="subtitle is-5">Chief Technology Officer</p>
+                </a>
             </div>
         </div>
         <div class="level-right">
@@ -55,15 +65,9 @@ title: About
         <div class="level-left">
             <div class="level-item">
                 <a href="https://www.smrxt.com">
-                    <h2 class="title is-4">SMRxT</h2>
+                    <p class="title is-4">SMRxT</p>
+                    <p class="subtitle is-5">Technical Advisor</p>
                 </a>
-            </div>
-            <div class="level-item">
-                <figure class="image is-24x24 is-marginless">
-                    <a href="https://www.smrxt.com">
-                        <img src="/images/smrxt-icon.png" />
-                    </a>
-                </figure>
             </div>
         </div>
         <div class="level-right">
@@ -77,15 +81,9 @@ title: About
         <div class="level-left">
             <div class="level-item">
                 <a href="https://www.cerner.com">
-                    <h2 class="title is-4">Cerner</h2>
+                    <p class="title is-4">Cerner</p>
+                    <p class="subtitle is-5">Vice President and Engineering Fellow</p>
                 </a>
-            </div>
-            <div class="level-item">
-                <figure class="image is-24x24 is-marginless">
-                    <a href="https://www.cerner.com">
-                        <img src="/images/cerner-icon.png" />
-                    </a>
-                </figure>
             </div>
         </div>
         <div class="level-right">
