update about page with Relatient position

--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,23 @@ title: About
     <div class="level is-mobile">
         <div class="level-left">
             <div class="level-item">
+                <a href="https://www.relatient.com/">
+                    <p class="title is-4">Relatient</p>
+                    <p class="subtitle is-5">Chief Technology Officer</p>
+                </a>
+            </div>
+        </div>
+        <div class="level-right">
+            <h3 class="subtitle is-6 has-text-grey">Since 2025</h3>
+        </div>
+    </div>
+    <p>
+        I am currently the Chief Technology Officer at <a href="https://www.relatient.com/">Relatient</a>, a healthcare software company whose mission is creating a simpler experience for people accessing the healthcare system. Our focus is delivering a world-class patient scheduling and engagement platform.
+    </p>
+    <br/>
+    <div class="level is-mobile">
+        <div class="level-left">
+            <div class="level-item">
                 <a href="https://www.illuminate.ai/">
                     <p class="title is-4">Illuminate</p>
                     <p class="subtitle is-5">Board Member</p>
