update travel locations

--- a/about/index.html
+++ b/about/index.html
@@ -225,6 +225,7 @@ title: About
         <li><a href="https://goo.gl/maps/SVbPW3H5ETS2">Jaipur, India</a></li>
         <li><a href="https://goo.gl/maps/zHhfKagUWTT2">Agra, India</a></li>
         <li><a href="https://goo.gl/maps/aU4Y6RGB2Kk">Kerala, India</a></li>
+        <li><a href="https://maps.app.goo.gl/4eKu9eonf71ZoS9X6">Pune, India</a></li>
         <li><a href="https://goo.gl/maps/uB3z7RAiGdz">Shanghai, China</a></li>
         <li><a href="https://goo.gl/maps/kiQ8AdE5CJ12">Hong Kong</a></li>
         <li><a href="https://goo.gl/maps/QrHBBKxSsrz">Taipei, Taiwan</a></li>
