add destinations in Ireland

--- a/about/index.html
+++ b/about/index.html
@@ -195,6 +195,10 @@ title: About
         Below are some of the notable places I have traveled over the course of my life.
     </p>
     <ul>
+        <li><a href="https://maps.app.goo.gl/YPqpMRE28CAZ13A47">Dublin, Ireland</a></li>
+        <li><a href="https://maps.app.goo.gl/PZE5scABB8yx3V1X7">Galway, Ireland</a></li>
+        <li><a href="https://maps.app.goo.gl/2PhgPs4r5iUdfRDe7">Westport, Ireland</a></li>
+        <li><a href="https://maps.app.goo.gl/1Sg9eHdBENnVWWhp8">Aran Islands, Ireland</a></li>
         <li><a href="https://maps.app.goo.gl/DjYDE8yzzwywumrP9">Victoria, BC</a></li>
         <li><a href="https://maps.app.goo.gl/yNiWJB2DeeLYmWq66">Port Angeles, Washington</a></li>
         <li><a href="https://goo.gl/maps/LovgMAMxhaRqMVdo9">Anchorage, Alaska</a></li>
